--- a/mentalChatbot/templates/drugs.html
+++ b/mentalChatbot/templates/drugs.html
@@ -41,7 +41,7 @@
     <div class="branding d-flex align-items-center">
 
       <div class="container position-relative d-flex align-items-center justify-content-end">
-        <a href="index.html" class="logo d-flex align-items-center me-auto">
+        <a href="{% url 'homepage' %}" class="logo d-flex align-items-center me-auto">
           <img src="{% static 'assets/img/logo1.png' %}" alt="">
           <h1 class="sitename">EduWell</h1>
         </a>
