--- a/mentalChatbot/templates/drugs.html
+++ b/mentalChatbot/templates/drugs.html
@@ -135,17 +135,18 @@
     <section id="faq">
         <h2>Frequently Asked Questions</h2>
         <div class="faq-item">
-            <button class="faq-question">How do I know if I have a problem?</button>
+            <a href="https://www.webmd.com/mental-health/addiction/signs-of-drug-addiction "><button href="" class="faq-question">How do I know if I am addicted to drugs?</button>  </a>
+
             <p class="faq-answer">If substance use is affecting your daily life, relationships, or academics, seek
                 support.</p>
         </div>
         <div class="faq-item">
-            <button class="faq-question">Where can I get help?</button>
+            <a href="https://www.pvamu.edu/sa/drug-and-alcohol-abuse-prevention-program-daapp/tips-for-preventing-substance-abuse/"> <button class="faq-question">Where can I get help?</button></a>
             <p class="faq-answer">University counseling centers, rehab programs, and anonymous helplines are available.
             </p>
         </div>
         <div class="faq-item">
-            <button class="faq-question">How can I help a friend struggling with substance abuse?</button>
+            <a href="https://adcare.com/family-resources/helping-your-friend/"><button class="faq-question">How can I help a friend struggling with substance abuse?</button> </a>
             <p class="faq-answer">Encourage open conversations, provide emotional support, and direct them to
                 professional resources.</p>
         </div>
